Bug 425280 - KMM adds an extra "/" to the institution url
Summary: KMM adds an extra "/" to the institution url
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-13 08:05 UTC by antoine
Modified: 2020-08-13 18:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
demo (1.01 MB, image/gif)
2020-08-13 08:05 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-08-13 08:05:10 UTC
Created attachment 130841 [details]
demo

SUMMARY

KMM adds an extra "/" to the institution url

STEPS TO REPRODUCE
1. Edit an Institution
2. Copy your bank url (from Firefox) and paste it into the institution dialog
3. Push the button to launch the website

OBSERVED RESULT
Firefox can not reach the website because KMM add an extra "/" to the website url


EXPECTED RESULT
It can easily be fixed by removing the extra "/" after pasting the website url.

SOFTWARE/OS VERSIONS
xUbuntu 20.04

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2020-08-13 18:04:40 UTC
Git commit df4451f1761149c1d6de68bb5d6326a244ba8ddf by Thomas Baumgart.
Committed on 13/08/2020 at 17:57.
Pushed by tbaumgart into branch '5.1'.

Remove unneeded slash in URL

and include the info message about URL modification in translation
FIXED-IN: 5.1.1

M  +2    -2    kmymoney/dialogs/knewbankdlg.cpp

https://invent.kde.org/office/kmymoney/commit/df4451f1761149c1d6de68bb5d6326a244ba8ddf
Comment 2 Thomas Baumgart 2020-08-13 18:10:15 UTC
Git commit b0a43985b2503b63e1e8cbeb6d957cc8322ad6ad by Thomas Baumgart.
Committed on 13/08/2020 at 18:10.
Pushed by tbaumgart into branch 'master'.

Remove unneeded slash in URL

and include the info message about URL modification in translation

(cherry picked from commit df4451f1761149c1d6de68bb5d6326a244ba8ddf)

M  +2    -2    kmymoney/dialogs/knewbankdlg.cpp

https://invent.kde.org/office/kmymoney/commit/b0a43985b2503b63e1e8cbeb6d957cc8322ad6ad