Remove unneeded slash in URL

and include the info message about URL modification in translation

BUG: 425280
FIXED-IN: 5.1.1